fixed alignment of button on homepage

--- a/nf-portal-site/src/style/style.scss
+++ b/nf-portal-site/src/style/style.scss
@@ -1151,6 +1151,7 @@ body.noScroll, html.noScroll {
 
   .synapse-chart {
     position: relative;
+    min-height: 189px;
   }
 
   .SRC-primary-background-color-hover:hover {
